--- a/styles.css
+++ b/styles.css
@@ -183,14 +183,46 @@ input[type="range"] {
   padding-top: 5vh;
   justify-content: center;
   gap: 40px;
-
 }
-
-.component > img{
+.component-icon{
   height: 100px;
   width: 100px;
   border-radius: 10px;
   box-shadow: none;
+  cursor: pointer;
+  transition: margin 1s ease;
+}
+
+.shown{
+  margin: 0 30px;
+  transition: margin 1s ease;
+    -webkit-animation: mover 1s infinite  alternate;
+    animation: mover 1s infinite  alternate;
+}
+
+@-webkit-keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-20px); }
+}
+@keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-20px); }
+}
+
+#shown-component > *{
+  display: flex;
+  padding: 5vh 15vw 0 15vw;
+  gap: 100px;
+}
+
+#shown-component p {
+  font-size: 2rem;
+}
+
+.component-cover{
+  height: 500px;
+  width: 700px;
+
 }
 
 
