--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 
 body{
   margin: 0;
+  overflow-x: hidden;
 }
 
 #corner-back-button{
@@ -39,7 +40,7 @@ h1,h2{
   -webkit-text-fill-color: transparent;
 }
 
-ul{
+.main-page-ul{
   position: sticky;
   top: 32vh;
   padding: 0;
@@ -65,7 +66,7 @@ button{
 
 img{
   border-radius: 20px;
-  box-shadow: 5px 5px 50px 2px lightblue;
+  box-shadow: 5px 5px 20px 2px lightblue;
 }
 
 .section-image{
@@ -101,20 +102,12 @@ li:not(hover) > button{
 #history-container{
   height: 80vh;
   position: absolute;
-  bottom: -85vh;
+  bottom: -90vh;
   left:0;
   width: 100%;
 }
 
-#history-content{
-  display: flex;
-  justify-content: center;
-  gap: 100px;
-  padding-top: 5vh;
-  height: 60vh;
-}
-
-#history-content p{
+#history-page p{
   width: 40vw;
   font-size: 1.5rem;
   padding: 65px 0 0 0;
@@ -124,44 +117,6 @@ li:not(hover) > button{
 #history-page img{
   height: 50vh;
   width: 50vh;
-}
-
-#range-container{
-  height: 60px;
-  padding: 20px 15vw;
-  padding-bottom: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#buttons-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 100px;
-  padding: 40px;
-  padding-top: 0;
-}
-
-#history-page button{
-  height: 30px;
-}
-
-#year-nav-container p {
-  font-size: 1.5rem;
-  padding: 10px;
-}
-
-input[type="range"] {
-  width: 1300px;
-}
-
-#current-year {
-  font-size: 1.7rem;  
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 /* COMPONENTS PAGE */
@@ -351,3 +306,122 @@ body {
   }
 }
 
+/* timeline */
+
+.swiper {
+  padding: 30px 0;
+}
+
+.swiper-container-wrapper--timeline .swiper-slide {
+  display: flex;
+  gap:50px;
+
+  background: #fff;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  background-color: transparent;
+}
+.swiper-container-wrapper--timeline .swiper-slide .container {
+  padding: 0;
+  width: 100%;
+}
+.swiper-container-wrapper--timeline .swiper-slide .title {
+  font-size: 18px;
+  opacity: 0;
+  transition: 0.5s ease 0.5s;
+}
+.swiper-container-wrapper--timeline .swiper-slide-active .title {
+  opacity: 1;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-progressbar {
+  position: relative;
+  margin-bottom: 70px;
+  background-color: transparent;
+  height: 4px;
+  border-bottom: 1px solid #888;
+  width: 85%;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-progressbar-fill {
+  background-color: #000;
+  height: 3px;
+  top: 2px;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-progressbar:before {
+  position: absolute;
+  top: 2px;
+  left: -100%;
+  width: 100%;
+  height: 3px;
+  background-color: #000;
+  content: "";
+}
+.swiper-container-wrapper--timeline .swiper-pagination-progressbar:after {
+  position: absolute;
+  top: 3px;
+  right: -100%;
+  width: 100%;
+  height: 1px;
+  background-color: #888;
+  content: "";
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom {
+  position: relative;
+  list-style: none;
+  margin: 1rem 0;
+  padding: 0;
+  display: flex;
+  line-height: 1.66;
+  bottom: 0;
+  z-index: 11;
+  width: 85%;
+  display: flex;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch {
+  position: relative;
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  display: block;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch .switch-title {
+  position: absolute;
+  font-weight: 400;
+  right: 0;
+  transform: translateX(50%);
+  transition: 0.2s all ease-in-out;
+  transition-delay: 0s;
+  cursor: pointer;
+  z-index: 1;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch .switch-title:after {
+  position: absolute;
+  top: calc(100% + 19px);
+  right: 50%;
+  transform: translateX(50%) translateY(-50%);
+  width: 12px;
+  height: 12px;
+  background: #000;
+  border-radius: 2rem;
+  content: "";
+  transition: 0.2s all ease-in-out;
+  transition-delay: 0s;
+  z-index: 1;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active .switch-title {
+  font-weight: 400;
+  transition-delay: 0.4s;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active .switch-title:after {
+  background: #000;
+  width: 25px;
+  height: 25px;
+  transition-delay: 0.4s;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active ~ .swiper-pagination-switch .switch-title {
+  color: #888;
+  font-weight: 16px;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active ~ .swiper-pagination-switch .switch-title:after {
+  background: #888;
+}
